// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client has multiple campaign ids matches snapshot on initial render 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <a
      class="nhsuk-back-link"
      data-testid="back-link-top"
      href="/choose-a-template-type"
    >
      Back to choose a template type
    </a>
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <h1
            class="nhsuk-heading-xl"
          >
            Upload a large print letter template
          </h1>
        </div>
      </div>
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="upload-large-print-letter-template"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="name"
              >
                Template name
              </label>
              <div
                class="nhsuk-hint"
              >
                This will not be visible to recipients
              </div>
              <details
                class="nhsuk-details nhsuk-u-margin-top-3"
              >
                <summary
                  class="nhsuk-details__summary"
                >
                  <span
                    class="nhsuk-details__summary-text"
                  >
                    Naming your templates
                  </span>
                </summary>
                <div
                  class="nhsuk-details__text"
                >
                  <p>
                    You should name your templates in a way that works best for your service or organisation.
                  </p>
                  <p>
                    Common template names include the:
                  </p>
                  <ul>
                    <li>
                      subject or reason for the message
                    </li>
                    <li>
                      intended audience for the template
                    </li>
                    <li>
                      version number of the template
                    </li>
                  </ul>
                  <p>
                    For example, 'Covid19 2025 - over 65s - version 3'
                  </p>
                </div>
              </details>
              <input
                class="nhsuk-input nhsuk-u-margin-bottom-2"
                id="name"
                name="name"
                type="text"
              />
            </div>
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="campaignId"
              >
                Campaign
              </label>
              <div
                class="nhsuk-hint"
              >
                Choose which campaign this letter is for
              </div>
              <select
                class="nhsuk-select"
                id="campaignId"
                name="campaignId"
              >
                <option />
                <option
                  value="Campaign 1"
                >
                  Campaign 1
                </option>
                <option
                  value="Campaign 2"
                >
                  Campaign 2
                </option>
              </select>
            </div>
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="file"
              >
                Template file
              </label>
              <div
                class="nhsuk-hint"
              >
                Only upload your final letter template file.
                <br />
                Make sure you use one of our blank template files to create the letter.
              </div>
              <input
                accept="application/vnd.openxmlformats-officedocument.wordprocessingml.document"
                class="file-upload nhsuk-input"
                id="file"
                name="file"
                type="file"
              />
            </div>
            <button
              aria-disabled="false"
              class="nhsuk-button"
              type="submit"
            >
              Upload letter template file
            </button>
          </form>
        </div>
        <div
          class="nhsuk-grid-column-one-third"
        >
          <h2
            class="nhsuk-heading-m"
            id="how-to-create-a-large-print-letter-template"
          >
            How to create a large print letter template
          </h2>
          <ol
            class="nhsuk-list nhsuk-list--number"
            start="1"
          >
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Download the relevant 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
                rel="noopener noreferrer"
                target="_blank"
              >
                blank letter template file (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Add 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/formatting"
                rel="noopener noreferrer"
                target="_blank"
              >
                formatting (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Add any 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/personalisation"
                rel="noopener noreferrer"
                target="_blank"
              >
                personalisation (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Save your Microsoft Word file and upload it to this page.
            </li>
          </ol>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`client has multiple campaign ids renders errors when blank form is submitted and error state is returned 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <a
      class="nhsuk-back-link"
      data-testid="back-link-top"
      href="/choose-a-template-type"
    >
      Back to choose a template type
    </a>
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#name"
            >
              Enter a template name
            </a>
          </li>
          <li>
            <a
              href="#campaignId"
            >
              Choose a campaign
            </a>
          </li>
          <li>
            <a
              href="#file"
            >
              Choose a template file
            </a>
          </li>
        </ul>
      </div>
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <h1
            class="nhsuk-heading-xl"
          >
            Upload a large print letter template
          </h1>
        </div>
      </div>
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="upload-large-print-letter-template"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6 nhsuk-form-group--error"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="name"
              >
                Template name
              </label>
              <div
                class="nhsuk-hint"
              >
                This will not be visible to recipients
              </div>
              <details
                class="nhsuk-details nhsuk-u-margin-top-3"
              >
                <summary
                  class="nhsuk-details__summary"
                >
                  <span
                    class="nhsuk-details__summary-text"
                  >
                    Naming your templates
                  </span>
                </summary>
                <div
                  class="nhsuk-details__text"
                >
                  <p>
                    You should name your templates in a way that works best for your service or organisation.
                  </p>
                  <p>
                    Common template names include the:
                  </p>
                  <ul>
                    <li>
                      subject or reason for the message
                    </li>
                    <li>
                      intended audience for the template
                    </li>
                    <li>
                      version number of the template
                    </li>
                  </ul>
                  <p>
                    For example, 'Covid19 2025 - over 65s - version 3'
                  </p>
                </div>
              </details>
              <span
                class="nhsuk-error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Enter a template name
              </span>
              <input
                class="nhsuk-input nhsuk-input--error nhsuk-u-margin-bottom-2"
                id="name"
                name="name"
                type="text"
              />
            </div>
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6 nhsuk-form-group--error"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="campaignId"
              >
                Campaign
              </label>
              <div
                class="nhsuk-hint"
              >
                Choose which campaign this letter is for
              </div>
              <span
                class="nhsuk-error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Choose a campaign
              </span>
              <select
                class="nhsuk-select nhsuk-select--error"
                id="campaignId"
                name="campaignId"
              >
                <option />
                <option
                  value="Campaign 1"
                >
                  Campaign 1
                </option>
                <option
                  value="Campaign 2"
                >
                  Campaign 2
                </option>
              </select>
            </div>
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6 nhsuk-form-group--error"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="file"
              >
                Template file
              </label>
              <div
                class="nhsuk-hint"
              >
                Only upload your final letter template file.
                <br />
                Make sure you use one of our blank template files to create the letter.
              </div>
              <span
                class="nhsuk-error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Choose a template file
              </span>
              <input
                accept="application/vnd.openxmlformats-officedocument.wordprocessingml.document"
                class="file-upload nhsuk-input nhsuk-input--error"
                id="file"
                name="file"
                type="file"
              />
            </div>
            <button
              aria-disabled="false"
              class="nhsuk-button"
              type="submit"
            >
              Upload letter template file
            </button>
          </form>
        </div>
        <div
          class="nhsuk-grid-column-one-third"
        >
          <h2
            class="nhsuk-heading-m"
            id="how-to-create-a-large-print-letter-template"
          >
            How to create a large print letter template
          </h2>
          <ol
            class="nhsuk-list nhsuk-list--number"
            start="1"
          >
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Download the relevant 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
                rel="noopener noreferrer"
                target="_blank"
              >
                blank letter template file (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Add 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/formatting"
                rel="noopener noreferrer"
                target="_blank"
              >
                formatting (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Add any 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/personalisation"
                rel="noopener noreferrer"
                target="_blank"
              >
                personalisation (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Save your Microsoft Word file and upload it to this page.
            </li>
          </ol>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`client has one campaign id matches snapshot on initial render 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <a
      class="nhsuk-back-link"
      data-testid="back-link-top"
      href="/choose-a-template-type"
    >
      Back to choose a template type
    </a>
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <h1
            class="nhsuk-heading-xl"
          >
            Upload a large print letter template
          </h1>
        </div>
      </div>
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="upload-large-print-letter-template"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="name"
              >
                Template name
              </label>
              <div
                class="nhsuk-hint"
              >
                This will not be visible to recipients
              </div>
              <details
                class="nhsuk-details nhsuk-u-margin-top-3"
              >
                <summary
                  class="nhsuk-details__summary"
                >
                  <span
                    class="nhsuk-details__summary-text"
                  >
                    Naming your templates
                  </span>
                </summary>
                <div
                  class="nhsuk-details__text"
                >
                  <p>
                    You should name your templates in a way that works best for your service or organisation.
                  </p>
                  <p>
                    Common template names include the:
                  </p>
                  <ul>
                    <li>
                      subject or reason for the message
                    </li>
                    <li>
                      intended audience for the template
                    </li>
                    <li>
                      version number of the template
                    </li>
                  </ul>
                  <p>
                    For example, 'Covid19 2025 - over 65s - version 3'
                  </p>
                </div>
              </details>
              <input
                class="nhsuk-input nhsuk-u-margin-bottom-2"
                id="name"
                name="name"
                type="text"
              />
            </div>
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="campaignId"
              >
                Campaign
              </label>
              <div
                class="nhsuk-hint"
              >
                This message plan will link to your only campaign:
              </div>
              <input
                name="campaignId"
                readonly=""
                type="hidden"
                value="Campaign 1"
              />
              <p
                data-testid="single-campaign-id-text"
              >
                Campaign 1
              </p>
            </div>
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="file"
              >
                Template file
              </label>
              <div
                class="nhsuk-hint"
              >
                Only upload your final letter template file.
                <br />
                Make sure you use one of our blank template files to create the letter.
              </div>
              <input
                accept="application/vnd.openxmlformats-officedocument.wordprocessingml.document"
                class="file-upload nhsuk-input"
                id="file"
                name="file"
                type="file"
              />
            </div>
            <button
              aria-disabled="false"
              class="nhsuk-button"
              type="submit"
            >
              Upload letter template file
            </button>
          </form>
        </div>
        <div
          class="nhsuk-grid-column-one-third"
        >
          <h2
            class="nhsuk-heading-m"
            id="how-to-create-a-large-print-letter-template"
          >
            How to create a large print letter template
          </h2>
          <ol
            class="nhsuk-list nhsuk-list--number"
            start="1"
          >
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Download the relevant 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
                rel="noopener noreferrer"
                target="_blank"
              >
                blank letter template file (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Add 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/formatting"
                rel="noopener noreferrer"
                target="_blank"
              >
                formatting (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Add any 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/personalisation"
                rel="noopener noreferrer"
                target="_blank"
              >
                personalisation (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Save your Microsoft Word file and upload it to this page.
            </li>
          </ol>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`client has one campaign id renders errors when blank form is submitted and error state is returned 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <a
      class="nhsuk-back-link"
      data-testid="back-link-top"
      href="/choose-a-template-type"
    >
      Back to choose a template type
    </a>
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#name"
            >
              Enter a template name
            </a>
          </li>
          <li>
            <a
              href="#file"
            >
              Choose a template file
            </a>
          </li>
        </ul>
      </div>
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <h1
            class="nhsuk-heading-xl"
          >
            Upload a large print letter template
          </h1>
        </div>
      </div>
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="upload-large-print-letter-template"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6 nhsuk-form-group--error"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="name"
              >
                Template name
              </label>
              <div
                class="nhsuk-hint"
              >
                This will not be visible to recipients
              </div>
              <details
                class="nhsuk-details nhsuk-u-margin-top-3"
              >
                <summary
                  class="nhsuk-details__summary"
                >
                  <span
                    class="nhsuk-details__summary-text"
                  >
                    Naming your templates
                  </span>
                </summary>
                <div
                  class="nhsuk-details__text"
                >
                  <p>
                    You should name your templates in a way that works best for your service or organisation.
                  </p>
                  <p>
                    Common template names include the:
                  </p>
                  <ul>
                    <li>
                      subject or reason for the message
                    </li>
                    <li>
                      intended audience for the template
                    </li>
                    <li>
                      version number of the template
                    </li>
                  </ul>
                  <p>
                    For example, 'Covid19 2025 - over 65s - version 3'
                  </p>
                </div>
              </details>
              <span
                class="nhsuk-error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Enter a template name
              </span>
              <input
                class="nhsuk-input nhsuk-input--error nhsuk-u-margin-bottom-2"
                id="name"
                name="name"
                type="text"
              />
            </div>
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="campaignId"
              >
                Campaign
              </label>
              <div
                class="nhsuk-hint"
              >
                This message plan will link to your only campaign:
              </div>
              <input
                name="campaignId"
                readonly=""
                type="hidden"
                value="Campaign 1"
              />
              <p
                data-testid="single-campaign-id-text"
              >
                Campaign 1
              </p>
            </div>
            <div
              class="nhsuk-form-group nhsuk-u-margin-bottom-6 nhsuk-form-group--error"
            >
              <label
                class="nhsuk-label nhsuk-label--s"
                for="file"
              >
                Template file
              </label>
              <div
                class="nhsuk-hint"
              >
                Only upload your final letter template file.
                <br />
                Make sure you use one of our blank template files to create the letter.
              </div>
              <span
                class="nhsuk-error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Choose a template file
              </span>
              <input
                accept="application/vnd.openxmlformats-officedocument.wordprocessingml.document"
                class="file-upload nhsuk-input nhsuk-input--error"
                id="file"
                name="file"
                type="file"
              />
            </div>
            <button
              aria-disabled="false"
              class="nhsuk-button"
              type="submit"
            >
              Upload letter template file
            </button>
          </form>
        </div>
        <div
          class="nhsuk-grid-column-one-third"
        >
          <h2
            class="nhsuk-heading-m"
            id="how-to-create-a-large-print-letter-template"
          >
            How to create a large print letter template
          </h2>
          <ol
            class="nhsuk-list nhsuk-list--number"
            start="1"
          >
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Download the relevant 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
                rel="noopener noreferrer"
                target="_blank"
              >
                blank letter template file (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Add 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/formatting"
                rel="noopener noreferrer"
                target="_blank"
              >
                formatting (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Add any 
              <a
                href="https://notify.nhs.uk/using-nhs-notify/personalisation"
                rel="noopener noreferrer"
                target="_blank"
              >
                personalisation (opens in a new tab)
              </a>
              .
            </li>
            <li
              class="nhsuk-u-margin-bottom-4"
            >
              Save your Microsoft Word file and upload it to this page.
            </li>
          </ol>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
